--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
     "@typescript-eslint/eslint-plugin": "^5.30.4",
     "@typescript-eslint/parser": "^5.30.4",
-    "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
